CLIP-44 #time 1h fixed QR code layout issue @resolve closed #50

--- a/src/components/ClipDetail/ClipDetail.less
+++ b/src/components/ClipDetail/ClipDetail.less
@@ -40,3 +40,20 @@
   background-color: #3276b1;
   border-color: #285e8e;
 }
+
+.qrcode {
+  margin: 0 auto;
+  display: block;
+}
+
+.center {
+  text-align: center;
+}
+
+.stats-details {
+  margin-top: 10px;
+}
+
+.form-group.extra-margin {
+  margin-bottom: 52px;
+}
